--- a/resources/views/pages/book/payment.edge
+++ b/resources/views/pages/book/payment.edge
@@ -140,7 +140,7 @@
 
     {{-- Footer --}}
     <div class="mt-12 text-center text-sm text-sand-10">
-      Powered by <a href="/" class="text-primary hover:underline">BookMe</a>
+      Powered by <a href="/" class="text-primary hover:underline">FastAppoint</a>
     </div>
   </div>
 
