--- a/resources/views/pages/featured/index.edge
+++ b/resources/views/pages/featured/index.edge
@@ -1,12 +1,12 @@
 @layout('layouts/app')
 
-@set('title', 'Featured Listing - BookMe')
+@set('title', 'Featured Listing - FastAppoint')
 
 @section('content')
   <div class="py-8 px-4 sm:px-6 lg:px-8 max-w-6xl mx-auto">
     <div class="mb-8">
       <h1 class="text-2xl font-bold text-sand-12">Featured Listing</h1>
-      <p class="text-sand-11 mt-1">Get your business featured on the BookMe homepage</p>
+      <p class="text-sand-11 mt-1">Get your business featured on the FastAppoint homepage</p>
     </div>
 
     @if(flashMessages.has('success'))
