--- a/resources/views/pages/auth/forgot-password.edge
+++ b/resources/views/pages/auth/forgot-password.edge
@@ -1,6 +1,6 @@
 @layout('layouts/app')
 
-@set('title', 'Forgot Password - PayFacilitator')
+@set('title', 'Forgot Password - FastAppoint')
 
 @section('content')
   <div class="min-h-screen flex items-center justify-center py-12 px-4 sm:px-6 lg:px-8">
