--- a/resources/views/pages/book/confirmation.edge
+++ b/resources/views/pages/book/confirmation.edge
@@ -152,7 +152,7 @@
 
     {{-- Footer --}}
     <div class="mt-12 text-center text-sm text-sand-10">
-      Powered by <a href="/" class="text-primary hover:underline">BookMe</a>
+      Powered by <a href="/" class="text-primary hover:underline">FastAppoint</a>
     </div>
   </div>
 </body>
