--- a/resources/views/pages/bookings/index.edge
+++ b/resources/views/pages/bookings/index.edge
@@ -1,6 +1,6 @@
 @layout('layouts/app')
 
-@set('title', 'Bookings - BookMe')
+@set('title', 'Bookings - FastAppoint')
 
 @section('content')
   <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 py-8">
@@ -32,7 +32,18 @@
         </div>
         <div>
           <label class="block text-sm font-medium text-sand-12 mb-1">Date</label>
-          <input type="date" name="date" value="{{ date }}" onchange="this.form.submit()" class="px-4 py-2 border border-sand-7 rounded-lg text-sand-12 focus:outline-none focus:ring-2 focus:ring-primary" />
+          <div class="relative">
+            <input 
+              type="date" 
+              name="date" 
+              value="{{ date }}" 
+              onchange="this.form.submit()" 
+              class="w-full px-4 py-2.5 pl-10 border border-sand-7 rounded-lg text-sand-12 focus:outline-none focus:ring-2 focus:ring-primary/20 focus:border-primary cursor-pointer" 
+            />
+            <svg class="w-5 h-5 text-sand-9 absolute left-3 top-1/2 -translate-y-1/2 pointer-events-none" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+              <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M8 7V3m8 4V3m-9 8h10M5 21h14a2 2 0 002-2V7a2 2 0 00-2-2H5a2 2 0 00-2 2v12a2 2 0 002 2z"/>
+            </svg>
+          </div>
         </div>
         @if(status !== 'all' || date)
           <div class="flex items-end">
