--- a/resources/views/pages/bookings/show.edge
+++ b/resources/views/pages/bookings/show.edge
@@ -1,6 +1,6 @@
 @layout('layouts/app')
 
-@set('title', 'Booking Details - BookMe')
+@set('title', 'Booking Details - FastAppoint')
 
 @section('content')
   <div class="max-w-3xl mx-auto px-4 sm:px-6 lg:px-8 py-8">
