--- a/resources/views/pages/featured/purchase.edge
+++ b/resources/views/pages/featured/purchase.edge
@@ -1,6 +1,6 @@
 @layout('layouts/app')
 
-@set('title', 'Get Featured - BookMe')
+@set('title', 'Get Featured - FastAppoint')
 
 @section('content')
   <div class="py-8 px-4 sm:px-6 lg:px-8 max-w-2xl mx-auto">
