--- a/resources/views/pages/staff/edit.edge
+++ b/resources/views/pages/staff/edit.edge
@@ -1,6 +1,6 @@
 @layout('layouts/app')
 
-@set('title', 'Edit Staff - BookMe')
+@set('title', 'Edit Staff - FastAppoint')
 
 @section('content')
   <div class="max-w-2xl mx-auto px-4 sm:px-6 lg:px-8 py-8">
